@@ -1,3 +1,7 @@
+2008-09-29  tama  <repeatedly@gmail.com>
+
+	* Add user transfer function.
+
 2008-09-24  tama  <repeatedly@gmail.com>
 
 	* Version 0.9.0
